--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	left:50px;
 }
 
+.cat {
+	position:absolute;
+	top:10px;
+	left:100px;
+}
+
+
 
 	</style>
 </head>
@@ -27,6 +34,7 @@
 	<img class="lamb" src="lamb.png"/>
 	<img class="animal" src="animal.png"/>
 	<img class="sunshine" src="sunshine.png"/>
+	<img class="cat" src="cat2.png"/>
 
 </body>
 </html>
