--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 
 
+
 	</style>
 </head>
 <body>
@@ -35,6 +36,7 @@
 	<img class="animal" src="animal.png"/>
 	<img class="sunshine" src="sunshine.png"/>
 	<img class="cat" src="cat2.png"/>
+	<img class="octopus" src="octopus.png"/>
 
 </body>
 </html>
