--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 	top:10px;
 	left:100px;
 }
+.rabbit {
+	position:absolute;
+	top:700px;
+	left:640px;
+
+}
 
 
 
@@ -36,7 +42,8 @@
 	<img class="animal" src="animal.png"/>
 	<img class="sunshine" src="sunshine.png"/>
 	<img class="cat" src="cat2.png"/>
-	<img class="octopus" src="octopus.png"/>
+	<img class="rabbit" src="rabbit2.png">
+
 
 </body>
 </html>
