--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 	left:640px;
 
 }
+.birds {
+	position:absolute;
+	top:100px;
+	left:50;
 
+}
 
 
 
@@ -42,7 +47,8 @@
 	<img class="animal" src="animal.png"/>
 	<img class="sunshine" src="sunshine.png"/>
 	<img class="cat" src="cat2.png"/>
-	<img class="rabbit" src="rabbit2.png">
+	<img class="rabbit" src="rabbit2.png"/>
+	<img class="birds" src="birds.png"/>
 
 
 </body>
