--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 	left:100px;
 
 }
-.animal {
-	position:absolute;
-	top:400px;
-	left:800px;
-}
 .sunshine {
 	position:absolute;
 	top:0px;
-	left:50px;
+	left:450px;
 }
 
 .cat {
@@ -27,16 +22,21 @@
 .rabbit {
 	position:absolute;
 	top:700px;
-	left:640px;
+	left:800px;
 
 }
 .birds {
 	position:absolute;
 	top:100px;
-	left:50;
+	left:300px;
 
 }
+.trees{
+	position:absolute;
+	top:250px;
+	left:965px;
 
+}
 
 
 	</style>
@@ -44,11 +44,11 @@
 <body>
 	<img class="field" src="field.jpg"/>
 	<img class="lamb" src="lamb.png"/>
-	<img class="animal" src="animal.png"/>
 	<img class="sunshine" src="sunshine.png"/>
 	<img class="cat" src="cat2.png"/>
 	<img class="rabbit" src="rabbit2.png"/>
 	<img class="birds" src="birds.png"/>
+	<img class="trees" src="trees.png"/>
 
 
 </body>
